Add mobile responsive for photoPage 21.11.2017 16

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,8 @@
 @import "layout/_photo_desktop_preview.scss";
 @import "layout/_form.scss";
 @import "misc/_responsive.scss";
+@import "misc/_responsive-photopage.scss";
+
 
 
 
