--- a/src/scss/misc/_mixin.scss
+++ b/src/scss/misc/_mixin.scss
@@ -12,6 +12,10 @@
     @media screen and (max-width:700px){
         width: 620px;
     } 
+
+    @media screen and (max-width:320px){
+        width: 280px;
+    } 
 }
 
 @mixin size ($font){
