Add transition to like in photo page  21.11.2017 20:13

--- a/src/scss/layout/_photo_desktop_preview.scss
+++ b/src/scss/layout/_photo_desktop_preview.scss
@@ -150,6 +150,7 @@
                     stroke-width: 3px;
                     stroke: $colorAccent;
                     fill: #f2f2f2;
+                    transition: all .2s ease-in-out;
                 }
                 
                 .like__svg:active>.favorite{
