--- a/src/scss/layout/_photo_desktop_preview.scss
+++ b/src/scss/layout/_photo_desktop_preview.scss
@@ -308,6 +308,7 @@
                     height: 15px;
                     border: 2px solid $colorAccent;
                     background-color: #f2f2f2;
+                    transition: all .2s ease-in-out;
 
                     &:hover{
                         background-color: $colorAccent;
