--- a/src/scss/misc/_responsive.scss
+++ b/src/scss/misc/_responsive.scss
@@ -754,6 +754,13 @@
         margin-top: 40px;
         font-size: 1.5rem;
     }
+    .price__table{
+        width: 100%;
+        font-size: 0.875rem;
+    }
+    td.price__cell span{
+         font-size: 0.875rem;
+        }
 
 
     /***
