--- a/src/scss/misc/_responsive.scss
+++ b/src/scss/misc/_responsive.scss
@@ -498,7 +498,7 @@
     * 2.4. TESTIMONIAL
     ***/
     .testimonial{
-        positin: relative;
+        position: relative;
         z-index: 9999;
     }
 
@@ -556,7 +556,7 @@
     th.price__heading:after{
     line-height: 1.5rem;
     top: 5px;
-    left: -45p;
+    left: -45px;
     }
 
     td {
