scrollbar in price-table

--- a/src/scss/misc/_responsive.scss
+++ b/src/scss/misc/_responsive.scss
@@ -538,7 +538,7 @@
     .price__container{
         position: relative;
         width: 100%;
-        overflow: visible;
+        overflow: auto;
         padding: 0;
         }
 
@@ -757,7 +757,10 @@
     .price__table{
         width: 100%;
         font-size: 0.875rem;
-    }
+        }
+        td.price__cell{
+            min-width: 320px;
+        }
     td.price__cell span{
          font-size: 0.875rem;
         }
