inline block for price table

--- a/src/scss/misc/_responsive.scss
+++ b/src/scss/misc/_responsive.scss
@@ -543,9 +543,8 @@
         }
 
     .price__table{
-                width: 1200px;
-                position: relative;
-                // left: -95%;
+        position: relative;
+
     td.price__name{
             display: none;
     }
@@ -561,17 +560,17 @@
 
     td {
         width: 400px;
-        text-align: center;
+        text-align: right;
         font-size: 0;
         }
 
        td.price__cell span{
-        display: block;
+        display: inline-block;
         text-transform: uppercase;
         }
 
         td.price__cell svg{
-
+           display: inline-block;
         }
 
         }
@@ -763,6 +762,10 @@
         }
     td.price__cell span{
          font-size: 0.875rem;
+         display: inline-block;
+        }
+        td.price__cell svg{
+            display: inline-block;
         }
 
 
