nothing personal just clean up

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,8 +20,8 @@
 @import "layout/_footer.scss";
 @import "layout/_photo_desktop_preview.scss";
 @import "layout/_form.scss";
-@import "misc/_responsive.scss";
-@import "misc/_responsive-photopage.scss";
+@import "layout/_responsive.scss";
+@import "layout/_responsive-photopage.scss";
 
 
 
